apps/transmission/08.server-service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service-web
  namespace: transmission
  labels:
    app: transmission
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9091
  selector:
    app: transmission-server
