apps/transmission/09.server-service-torrent.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service-torrent
  namespace: transmission
  labels:
    app: transmission
spec:
  ports:
  - protocol: TCP
    port: 51413
    targetPort: 51413
  - protocol: TCP
    port: 51413
    targetPort: 51413
  selector:
    app: transmission-server
